MDEV-11695 Define a reasonable upper limit for innodb_spin_wait_delay

The upper limit of innodb_spin_wait_delay was ~0UL. It does not make
any sense to wait more than a few dozens of microseconds between
attempts to acquire a busy mutex.

Make the new upper limit 6000. ut_delay(6000) could correspond to
several milliseconds even today.